swagger update: added pagination
